# Aledb

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  client_cli.py  dboh.json  doc.json  docker-compose.yml  gen_compose.py  test.json
aledb/: Cargo.toml  Dockerfile
aledb/src/: engine.rs  main.rs
benches/: bench1.txt  bench2.txt  bench3.txt  db_bench.rs
db/: Cargo.toml  Dockerfile  docker-compose.yml
db/benches/: README.md
db/src/: engine.rs  main.rs
gateway/: Dockerfile.gateway  go.mod  main.go
src/: db.rs  engine.rs  main.rs
