[package]
name = "aledb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4"] }
reqwest = { version = "0.13.4", features = ["json"] }
rmp-serde = "1.3.0"
zstd = "0.13"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "db_bench"
harness = false